option(BUILD_CSBEATS "Build the beats score frontend" ON)
option(BUILD_CSOUND_COMMAND "Build the Csound command" ON)
option(BUILD_SRC_CONV "Build src_conv utility" ON)

if (BUILD_SRC_CONV)
    if (USE_VCPKG)
        find_package(SampleRate CONFIG REQUIRED)
        assign_bool(SampleRate_FOUND TARGET SampleRate::samplerate)
    else()
        find_package(SampleRate MODULE)
    endif()
endif()

check_deps(BUILD_CSBEATS FLEX_EXECUTABLE BISON_EXECUTABLE)
check_deps(BUILD_SRC_CONV USE_LIBSNDFILE SampleRate_FOUND)

if(BUILD_UTILITIES)
    add_subdirectory(atsa)
    add_subdirectory(cs)
    add_subdirectory(csanalyze)
    add_subdirectory(csb64enc)
    add_subdirectory(cvanal)
    add_subdirectory(dnoise)
    add_subdirectory(envext)
    add_subdirectory(extract)
    add_subdirectory(extractor)
    add_subdirectory(het_export)
    add_subdirectory(het_import)
    add_subdirectory(hetro)
    add_subdirectory(lpanal)
    add_subdirectory(lpc_export)
    add_subdirectory(lpc_import)
    add_subdirectory(makecsd)
    add_subdirectory(mixer-bin)
    add_subdirectory(pv_export)
    add_subdirectory(pv_import)
    add_subdirectory(pvanal)
    add_subdirectory(pvlook)
    add_subdirectory(scale)
    add_subdirectory(scot)
    add_subdirectory(scsort)
    add_subdirectory(sdif2ad)
    add_subdirectory(sndinfo)
    if (BUILD_SRC_CONV)
        add_subdirectory(src_conv)
    endif()
    add_subdirectory(srconv)
endif()

if (BUILD_CSOUND_COMMAND)
    add_subdirectory(csdebugger)
    add_subdirectory(csound-bin)
endif()

if (BUILD_CSBEATS)
    add_subdirectory(csbeats)
endif()

add_subdirectory(Bela)